# fgal

./: CMakeLists.txt
cmake/: fgal-config.cmake
include/operations/: operations.h
include/types/: line.h  point2d.h  vector2d.h
src/: main.cpp
src/operations/: operations.cpp
